--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.scss
@@ -32,20 +32,20 @@
   .modal-video {
     /*display: block;  Hidden by default */
     position: fixed; /* Stay in place */
-    top: -2%;  
+    top: -2%;
     z-index: 999; /* Sit on top */
-   
+
     width: 100%; /* Full width */
     height:100%; /* Full height */
     overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0 0 0 / 50%); /* Black w/ opacity */
 
   }
-  
+
   .container-checkbox input:checked ~ .checkmark {
     background-color: black;
   }
-  
+
   .active-rating-star {
     color: #76d354;
   }
@@ -55,25 +55,61 @@
   .rating-star {
     color: grey;
   }
-  
+  // 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
+.sm-section2-rkScale{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
+
+}
+
+.sm-row-box-rkScale{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+
+}
+.sm-column-box-rkScale{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  justify-content: center;}
+
+.sm-section3-rkScale{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.2rem;
+  width: 100%;
+  gap: 1rem;
+}
+
   @media (min-width: 1025px) {
     .desktop {
       display: flex;
       flex-direction: column;
     }
-  
+
     .mobile {
       display: none;
       padding-bottom: 30px;
     }
-  
+
     .test-name-table {
       display: flex;
       flex-direction: row;
     }
   }
-  
-  @media (max-width: 1024px) {   
+
+  @media (max-width: 1024px) {
     .desktop {
       display: none;
     }
@@ -87,26 +123,26 @@
       border-radius: 5px;
       width: 100vw;
       overflow: hidden;
-  
+
     }
-  
+
     .mobile {
       padding-bottom: 30px;
     }
-  
+
     .selectedCard{
      display: none;
     }
     .noSelectedCard{
       right: 7px;
     }
-  
+
   }
 
   .test-name-table:hover {
     @include BoxShadow(6);
   }
-  
+
   .red {
     background-color: white;
     border-left: rgb(231, 230, 230) 1px solid;
@@ -115,7 +151,7 @@
     padding: 0px;
     // margin: 5px;
   }
-  
+
   .blue {
     background-color: white;
     border-left: rgb(230, 230, 230) 1px solid;
@@ -124,11 +160,11 @@
     padding: 0px;
     // margin: 5px;
   }
-  
+
   .test-name-table:last-child {
     border-bottom: rgb(231, 230, 230) 1px solid;
   }
-  
+
   .main-container {
     display: flex;
     flex-direction: column;
@@ -138,7 +174,7 @@
     overflow-x: scroll;
     height: 46vh;
   }
-  
+
   .rating-text {
     font-size: 17px;
     // margin-bottom: 20px;
@@ -146,47 +182,47 @@
     font-weight: bold;
     color: #324395;
   }
-  
+
   .header-title {
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
   }
-  
+
   .header-delete-icon {
     cursor: pointer;
     margin: -2px 5px;
     color: red;
     font-size: 20px;
   }
-  
+
   .row-box {
     border: none;
     // max-width: 300px;
   }
-  
+
   .rationale-box {
     border: none;
     // width: 300px;
   }
-  
+
   .add-column {
     outline: none;
-  
+
     float: right;
     color: #324395;
   }
-  
+
   .add-column-active {
     outline: none;
     float: right;
-    
+
     mat-icon{
       color: #324395;
     }
   }
-  
+
   .image-row {
     display: flex;
     flex-direction: row;
@@ -196,7 +232,7 @@
   .image-row:hover {
     @include BoxShadow(4);
   }
-  
+
   .image-cell {
     display: flex;
     flex-direction: row;
@@ -205,71 +241,71 @@
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .scroller-style::-webkit-scrollbar {
     width: 3px;
   }
-  
+
   /* Track */
   .scroller-style::-webkit-scrollbar-track {
     background: white;
   }
-  
+
   /* Handle */
   .scroller-style::-webkit-scrollbar-thumb {
     background: #f1f1f1;
     border-radius: 10px;
   }
-  
+
   /* Handle on hover */
   .scroller-style::-webkit-scrollbar-thumb:hover {
     background: #283e90;
   }
-  
-  
+
+
   textarea {
     resize: none;
     outline: none;
     height: auto;
     overflow: auto;
   }
-  
-  
+
+
   textarea::-webkit-scrollbar {
     width: 3px;
   }
-  
+
   /* Track */
   textarea::-webkit-scrollbar-track {
     background: white;
   }
-  
+
   /* Handle */
   textarea::-webkit-scrollbar-thumb {
     background: #f1f1f1;
     border-radius: 10px;
   }
-  
+
   /* Handle on hover */
   textarea::-webkit-scrollbar-thumb:hover {
     background: #283e90;
   }
-  
+
   // textarea::-webkit-scrollbar {
   //   display: none;
   // }
-  
+
   textarea {
     -webkit-tap-highlight-color: transparent;
     width: 100%;
-    // min-height: 1.5rem; 
+    // min-height: 1.5rem;
     padding: 0.2rem 0.0rem;
     // font-size: 1rem;
     // line-height: 2rem;
     // font-weight: 300;
     background: #ffffff;
     justify-content: center;
-    
+
     border-radius: 6px;
     outline: none;
     // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
@@ -278,28 +314,28 @@
     transition: ease 0.2s;
     cursor: pointer;
   }
-  
+
   textarea::placeholder {
     color: #9fa8da;
   }
-  
+
   textarea:focus {
     min-height: 3rem;
     cursor: text;
     box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
   }
-  
+
   textarea:placeholder-shown {
     background: none;
   }
-  
-   
+
+
   mat-form-field {
     margin-right: 12px;
   }
-  
+
   // INPUT RANGE STYLE
-  
+
   input[type="range"] {
     -webkit-appearance: none;
     margin: 7px 8px;
@@ -385,7 +421,7 @@
   input[type="range"]:focus::-ms-fill-upper {
     background: #ef7f25;
   }
-  
+
   @supports (-webkit-appearance: none) or (-moz-appearance: none) {
     input[type="checkbox"],
     input[type="radio"] {
@@ -521,19 +557,19 @@
       }
     }
   }
-  
+
   .modal-video {
     /*display: block;  Hidden by default */
     position: fixed; /* Stay in place */
     top: 0%;
     z-index: 999; /* Sit on top */
-  
+
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgb(0 0 0 / 50%); /* Black w/ opacity */
-  
+
     /* Modal Content/Box */
     .modal-content {
         background-color: rgba(0, 0, 0, 0);
@@ -551,12 +587,12 @@
         img:last-child {
             margin-bottom: 0;
         }
-    }    
-  
+    }
+
     .close-modal {
         // margin-bottom: 5px;
         position: relative;
-    
+
         // top: 12%;
         left: 42.5%;
         width: 15%;
@@ -572,7 +608,7 @@
         // border-radius: 5px;
         transition: background-color 0.5s, color 0.5s;
     }
-  
+
     .close-modal:hover,
     .close-modal:focus {
         background-color: #283e90;
@@ -588,7 +624,7 @@
     height: 0;
     width: 0;
   }
-  
+
   //-------------modal-----------------//
   @media (min-width: 1025px) {
     .modal-video .modal-content {
@@ -601,35 +637,35 @@
         overflow-y: hidden;
         overflow-x: hidden;
     }
-  
+
     .modal-video .close-modal {
         // margin-left: 42.5%;
         top: 12%;
     }
-  
+
     .modal-content::-webkit-scrollbar {
         width: 6px;
     }
-  
+
     /* Track */
     .modal-content::-webkit-scrollbar-track {
         background: white;
     }
-  
+
     /* Handle */
     .modal-content::-webkit-scrollbar-thumb {
         background: #283e90;
         border-radius: 10px;
     }
-  
+
     /* Handle on hover */
     .modal-content::-webkit-scrollbar-thumb:hover {
         background: #283e90;
     }
   }
-  
+
   //-------------modal mobil-----------------------//
-  
+
   @media only screen and (min-width: 993px) and (max-width: 1024px) {
     .modal-video .modal-content {
         top: 3%;
@@ -638,16 +674,16 @@
         width: 30%;
         height: auto;
     }
-  
-    
-  
+
+
+
     .modal-video .close-modal {
         position: relative;
         // margin-left: 42.5%;
         top: 5%;
     }
   }
-  
+
   @media only screen and (min-width: 769px) and (max-width: 992px) {
     .modal-video .modal-content {
         top: 4%;
@@ -656,14 +692,14 @@
         width: 30%;
         height: auto;
     }
-  
+
     .modal-video .close-modal {
         position: relative;
         // margin-left: 42.5%;
         top: 5%;
     }
   }
-  
+
   @media only screen and (min-width: 576px) and (max-width: 768px) {
     .modal-video .modal-content {
         top: 4%;
@@ -672,17 +708,16 @@
         width: 40%;
         height: auto;
     }
-  
-  
+
+
     .modal-video .close-modal {
         position: relative;
         // margin-left: 42.5%;
         top: 5%;
     }
   }
-  
-  
-  
+
+
+
   // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
   // END OF THE SCSS PROJECT *******************************************************************************************
-  
