--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -355,69 +355,168 @@
 
 
 <!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
-<div *ngIf="uploadImagesBox" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
-    <div style="position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #ccc;
-    cursor: move;
-    width: 1024px;
-    height: 54px;" cdkDragHandle> </div>
-    <div style="text-align: center;">
-        <div style="font-size: 16px;margin: 20px;color: #48535e;">UPLOAD IMAGES</div>
-        <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-    </div>
-    <hr>
-    <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 30px;">
-    </div>
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
+    style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+       max-height: 36rem;
+    bottom: -2; ">
 
-    <!-- IMAGE UPLOADER CODE -->
-    <div style="display: flex;flex-direction: row;justify-content: space-between;gap: 30px;">
-        <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
-            multiple accept="image/*">
+<div class="example-handle" cdkDragHandle>WWW</div>
+     <!-- Cards Criteria-->
+     <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Criteria</mat-card-title>
+      </mat-card-header>
+      <br>
+      <div class="sm-section2-rkScale" >
+        <div class="sm-column-box-rkScale">
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Name</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
+            <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
+          </mat-form-field>
 
-
-        <button mat-raised-button style="background-color: #003180;color:white;margin: -3px -173px 0px 29px;"
-            (click)="fileUpload.click()">
-            Select files to upload
-        </button>
-        <button *ngIf="IMAGES_UPLOADED.length > 0" mat-raised-button
-            style="background-color: #ee7f25;color:white; margin-right: 33px;" (click)="uploadAllImages()">
-            Upload Files
-        </button>
-    </div>
-    <div style="display: flex;flex-direction: row; gap:10; padding-top: 10px;">
-
-        <div class="template-list" [dragula]="'draggableBag'" [(dragulaModel)]="IMAGES_UPLOADED"
-            style="display: flex;flex-direction: column; overflow-y: scroll;width: 100%;justify-content: center;">
-            <div *ngFor="let template of IMAGES_UPLOADED; let imgIndex = index" [ngClass]="(imgIndex%2==0)?'red':'blue'"
-                class="image-row">
-
-                <div class="image-cell">
-                    <div style="font-size: 25px;color: #003180;width: 40px;">{{imgIndex + 1}}</div>
-                    <img [src]="template.FileContent" [width]="logoWidth">
-                </div>
-
-                <input type="text" [value]="template.FileName">
-                <p>{{template.FileType}}</p>
-                <button (dblclick)="deleteImage(imgIndex)" mat-icon-button style="background-color: #ffffff;"
-                    matTooltip="double click to delete " matTooltipPosition="above">
-                    <mat-icon style="color: #e20000;">delete</mat-icon>
-                </button>
-
-            </div>
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Description</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description" style="font-size: 20px;color: #ee7f25;">
+            <mat-hint>Enter a brief description of the category</mat-hint> <!-- Hint text for Category Description -->
+          </mat-form-field>
         </div>
-    </div>
+<br>
+          <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+          <div class="sm-row-box-rkScale">
+           <div> <div style="font-size: 16px;color: #48535e;">MAX NUMBER OF CRITERIA</div>
 
-    <hr>
-    <div
-        style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button
-            (click)="uploadImagesBox = false" aria-label="ranking">
-            <mat-icon>cancel</mat-icon><br>Cancel
-        </button>
-    </div>
+           <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
+               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                   {{bmxItem.componentSettings[0].minRule}}</div>
+               <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
+                   style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+           </div></div>
+          <div>
+            <div style="font-size: 16px;color: #48535e;">MIN NUMBER OF CRITERIA</div>
+
+          <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                  {{bmxItem.componentSettings[0].maxRule}}</div>
+              <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
+                  style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+          </div></div>
+          </div>
+      </div>
+      <mat-card-content>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
+    <!-- Cards Test Name-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Test Name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div style="text-align: center;">
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+      </div>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
+          <mat-label>Copy & Paste TEST NAMES</mat-label>
+          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
+              placeholder="Paste test names here" cdkTextareaAutosize
+              cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
+          <mat-hint>Type or paste the test names here that you want to include</mat-hint>
+        </mat-form-field>
+      </div>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
+
+   <!-- Cards Select Ranking-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Select Ranking</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="sm-section3-rkScale">
+
+          <div class="sm-column-box-rkScale" style="gap: 4rem;">
+            <div style="display: flex; flex-direction: column; width: 40%;">
+              <div style="font-size: 12px; color: #48535e;">TYPE NEW CRITERIA</div>
+              <div style="display: flex;">
+                <mat-form-field style="flex: 1; width: 100%;" appearance="outline">
+                  <mat-label>New Criteria</mat-label>
+                  <input matInput [(ngModel)]="newCriteria" style="font-size: 12px;">
+                  <mat-hint>Enter a criterion and click add</mat-hint> <!-- Hint for New Criteria -->
+                </mat-form-field>
+                <mat-icon style="cursor: pointer; font-size: 33px; color: #324395;"
+                          (click)="addCriteria(newCriteria); newCriteria=''">add_box</mat-icon>
+              </div>
+            </div>
+
+            <div style="display: flex; flex-direction: column; width: 40%;">
+              <mat-form-field appearance="outline" style="margin: 0px; width: 100%;">
+                <mat-label>Choose Criteria</mat-label>
+                <mat-select multiple [(ngModel)]="selectedCriteria"
+                    (selectionChange)="criteriaSelection(selectedCriteria)">
+                  <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
+                    {{criteriaItem.name}}
+                    <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
+                        style="cursor: pointer; font-size: 15px; color: #ee7f25;" (dblclick)="deleteCriteria(c);">
+                        cancel</mat-icon>
+                  </mat-option>
+                </mat-select>
+                <mat-hint>Select one or more criteria from the list</mat-hint> <!-- Hint for Choose Criteria -->
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="sm-row-box-rkScale">
+          <div>
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+              <br>
+              <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                  {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                      max="10">
+                  10 <br>
+              </div>
+              <label for="volume">{{rankingScaleValue}}</label>
+
+          </div>
+          <div style="    margin-top: 0.5rem;
+        ">
+              <div style="font-size: 16px;color: #48535e;">CHOOSE RATING ICON</div>
+              <br>
+              <mat-radio-group aria-label="Select an option" [(ngModel)]="ratingScaleIcon">
+                  <mat-icon style="color:#76d354;">grade</mat-icon>
+                  <mat-radio-button value="grade">
+                  </mat-radio-button>
+                  <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
+                  <mat-radio-button value="rectangle">
+                  </mat-radio-button>
+              </mat-radio-group>
+          </div>
+
+          </div>
+          </div>
+      </mat-card-content>
+
+    </mat-card>
+
+    <!-- BUTTON-->
+    <div class="sm-row-box-rkScale">
+      <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+          aria-label="ranking">
+          <mat-icon>cancel</mat-icon><br>Cancel
+      </button>
+      <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+          (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+          aria-label="ranking">
+          <mat-icon>check_circle</mat-icon><br> Done
+      </button>
+  </div>
 </div>
 <!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 END UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
 
