--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -39,7 +39,44 @@
 .rating-star {
   color: grey;
 }
+// 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
+.sm-section2-rkScale{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
 
+}
+
+.sm-row-box-rkScale{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+
+}
+.sm-column-box-rkScale{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  justify-content: center;}
+
+.sm-section3-rkScale{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.2rem;
+  width: 100%;
+  gap: 1rem;
+}
+
+// 🥑🥑🥑🥑 CONFIGURATION BOX 🥑🥑🥑🥑
 @media (min-width: 576px) {
   .desktop {
     display: flex;
@@ -158,7 +195,7 @@
 .add-column-active {
   outline: none;
   float: right;
-  
+
   mat-icon{
     color: #324395;
   }
@@ -226,14 +263,14 @@ textarea::-webkit-scrollbar-thumb:hover {
 textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
-  // min-height: 1.5rem; 
+  // min-height: 1.5rem;
   padding: 0.2rem 0.0rem;
   // font-size: 1rem;
   // line-height: 2rem;
   // font-weight: 300;
   background: #ffffff;
   justify-content: center;
-  
+
   border-radius: 6px;
   outline: none;
   // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
@@ -513,12 +550,12 @@ input[type="range"]:focus::-ms-fill-upper {
       img:last-child {
           margin-bottom: 0;
       }
-  }    
+  }
 
   .close-modal {
       // margin-bottom: 5px;
       position: relative;
-  
+
       // top: 12%;
       left: 42.5%;
       width: 15%;
@@ -601,7 +638,7 @@ input[type="range"]:focus::-ms-fill-upper {
       height: auto;
   }
 
-  
+
 
   .modal-video .close-modal {
       position: relative;
