--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -4,8 +4,8 @@
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
-        <span class="checkmark">&#x2714;</span>        
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+        <span class="checkmark">&#x2714;</span>
     </label> -->
     <div class="modal-content">
         <video src='{{CREATION_VIDEO_PATH}}' controls></video>
@@ -174,126 +174,151 @@
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
-    <div style="position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #ccc;
-    cursor: move;
-    width: 1024px;
-    height: 54px;" cdkDragHandle> </div>
-    <div style="text-align: center;">
-        <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
-        <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-    </div>
-    <div>
-        <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-            <mat-label>Copy & Paste TEST NAMES</mat-label>
-            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""></textarea>
-        </mat-form-field>
-        <p style="margin-left: 30px; color: #757575;">
-            Add the names you want to test
-        </p>
-    </div>
+    style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+       max-height: 36rem;
+    bottom: -2; ">
 
-    <hr>
-    <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 10px;">
+<div class="example-handle" cdkDragHandle>WWW</div>
+     <!-- Cards Criteria-->
+     <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Criteria</mat-card-title>
+      </mat-card-header>
+      <br>
+      <div class="sm-section2-rkScale" >
+        <div class="sm-column-box-rkScale">
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Name</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
+            <mat-hint>Add a category to the left side</mat-hint>
+          </mat-form-field>
 
-        <div style="display: flex; flex-direction: column;">
-            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-                [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
-                style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 100%">
-            <p style=" color: #757575;">
-                Add a category to the left side
-            </p>
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Description</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description" style="font-size: 20px;color: #ee7f25;">
+            <mat-hint>Add a rate matrix subtitle</mat-hint>
+          </mat-form-field>
         </div>
+<br>
 
-        <div style="display: flex; flex-direction: column;">
-            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-                [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-                style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 100%">
-            <p style="color: #757575;">
-                Add a rate matrix subtitle
-            </p>
-        </div>
+          <div class="sm-row-box-rkScale">
+            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
 
-        <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+            <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
+          </div>
+          <div class="sm-row-box-rkScale">
+           <div> <div style="font-size: 16px;color: #48535e;">MAX NUMBER OF CRITERIA</div>
 
-        <mat-checkbox [(ngModel)]="bmxItem.componentSettings[1].isImageType">Rank Logos</mat-checkbox>
+           <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
+               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                   {{bmxItem.componentSettings[0].minRule}}</div>
+               <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
+                   style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+           </div></div>
+          <div>
+            <div style="font-size: 16px;color: #48535e;">MIN NUMBER OF CRITERIA</div>
 
-        <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;">
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
-                {{bmxItem.componentSettings[0].minRule}}</div>
-            <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
-                style="width:120px; padding: 0px 10px;">
-        </div>
-        <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;">
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
-                {{bmxItem.componentSettings[0].maxRule}}</div>
-            <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
-                style="width:120px; padding: 0px 10px;">
-        </div>
+          <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                  {{bmxItem.componentSettings[0].maxRule}}</div>
+              <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
+                  style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+          </div></div>
+          </div>
+      </div>
+      <mat-card-content>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
+    <!-- Cards Test Name-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Test Name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div style="text-align: center;">
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+      </div>
+      <div>
+          <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
+              <mat-label>Copy & Paste TEST NAMES</mat-label>
+              <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""></textarea>
+          </mat-form-field>
+          <p style="margin-left: 30px; color: #757575;">
+              Add the names you want to test
+          </p>
+      </div>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
+
+   <!-- Cards Select Ranking-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Select Ranking</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="sm-section3-rkScale">
 
 
-    </div>
 
-    <hr>
-    <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-        <div>
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RANKIN RANGE</div>
-            <br>
+          <div class="sm-row-box-rkScale">
+          <div>
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+              <br>
+              <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                  {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                      max="10">
+                  10 <br>
+              </div>
+              <label for="volume">{{rankingScaleValue}}</label>
 
-            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                2 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="2" max="10">
-                10 <br>
-            </div>
-            <label for="volume">{{rankingScaleValue}}</label>
-            <!-- <hr> -->
+          </div>
+          <div style="    margin-top: 0.5rem;
+        ">
+              <mat-radio-group aria-label="Select an option" [(ngModel)]="this.bmxItem.componentSettings[0].rankType"
+              (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)">
+              <div style="display: flex;flex-direction: column;gap: 1px;">
+                  <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                  <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
+                  <mat-radio-button value="radio">Radio Butons</mat-radio-button>
+              </div>
+          </mat-radio-group>
+          </div>
+              <!-- <select>
+                  <option value="">
+                      <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
+                  </option>
+                  <option value="valid" selected>
+                      <mat-icon style="color:#76d354;">grade</mat-icon>
+                  </option>
+                  <option value="invalid">
+                      <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
+                  </option>
+              </select> -->
+          </div>
+          </div>
+      </mat-card-content>
 
-        </div>
+    </mat-card>
 
-        <div style="display: flex;flex-direction: column;gap: 1px;">
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>choose criteria</mat-label>
-                <mat-select multiple [(ngModel)]="selectedCriteria"
-                    (selectionChange)="criteriaSelection(selectedCriteria)">
-                    <mat-option *ngFor="let cirteriaItem of CRITERIA" [value]="cirteriaItem">{{cirteriaItem.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field> -->
-            <mat-radio-group aria-label="Select an option" [(ngModel)]="this.bmxItem.componentSettings[0].rankType"
-                (change)="rankingTableType(this.bmxItem.componentSettings[0].rankType)">
-                <div style="display: flex;flex-direction: column;gap: 1px;">
-                    <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
-                    <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
-                    <mat-radio-button value="radio">Radio Butons</mat-radio-button>
-                </div>
-            </mat-radio-group>
-
-        </div>
-
-        <div>
-            <!-- <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CHOOSE RATING ICON</div>
-            <br>
-            <mat-radio-group aria-label="Select an option" [(ngModel)]="ratingScaleIcon">
-                <mat-icon style="color:#76d354;">grade</mat-icon>
-                <mat-radio-button value="grade">
-                </mat-radio-button>
-                <mat-icon style="color:#e6ad11;">settings_cell</mat-icon>
-                <mat-radio-button value="settings_cell">
-                </mat-radio-button>
-            </mat-radio-group>
-            <hr> -->
-        </div>
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
-            aria-label="ranking">
-            <mat-icon>cancel</mat-icon><br>Cancel
-        </button>
-        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
-            <mat-icon>check_circle</mat-icon><br> DONE
-        </button>
-    </div>
+    <!-- BUTTON-->
+    <div class="sm-row-box-rkScale">
+      <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+          aria-label="ranking">
+          <mat-icon>cancel</mat-icon><br>Cancel
+      </button>
+      <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+          (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+          aria-label="ranking">
+          <mat-icon>check_circle</mat-icon><br> Done
+      </button>
+  </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 
@@ -341,7 +366,7 @@
 
 
                         <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
-                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white; 
+                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white;
                             animation: rubberBand 700ms ease-in  forwards;">{{y}}</button>
 
 
@@ -354,8 +379,8 @@
 
                         <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                         <div style="display: flex;">
-                            <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)" *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 && 
-                                this.bmxItem.componentSettings[0].rankType == 'dropDown'" style="background-color: #ee7f25;    
+                            <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)" *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 &&
+                                this.bmxItem.componentSettings[0].rankType == 'dropDown'" style="background-color: #ee7f25;
                                     color: white;
                                     min-width: 20px;
                                     line-height: 19px;
@@ -382,7 +407,7 @@
 
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
                     (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -541,7 +566,7 @@
 
                 <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
+                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
                              color: white;
                              min-width: 20px;
                              line-height: 20px;
