--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -163,8 +163,8 @@
         <mat-card-title>Criteria</mat-card-title>
       </mat-card-header>
       <br>
-      <div class="section2" >
-        <div class="column-boxSM">
+      <div class="sm-section2-rkScale" >
+        <div class="sm-column-box-rkScale">
           <mat-form-field appearance="outline" style="width: 40%">
             <mat-label>Category Name</mat-label>
             <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
@@ -179,7 +179,7 @@
         </div>
 <br>
           <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-          <div class="row-boxSM">
+          <div class="sm-row-box-rkScale">
            <div> <div style="font-size: 16px;color: #48535e;">MAX NUMBER OF CRITERIA</div>
 
            <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
@@ -236,9 +236,9 @@
         <mat-card-title>Select Ranking</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <div class="section3">
+        <div class="sm-section3-rkScale">
 
-          <div class="column-boxSM" style="gap: 4rem;">
+          <div class="sm-column-box-rkScale" style="gap: 4rem;">
             <div style="display: flex; flex-direction: column; width: 40%;">
               <div style="font-size: 12px; color: #48535e;">TYPE NEW CRITERIA</div>
               <div style="display: flex;">
@@ -269,7 +269,7 @@
             </div>
           </div>
 
-          <div class="row-boxSM">
+          <div class="sm-row-box-rkScale">
           <div>
               <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
               <br>
@@ -294,17 +294,7 @@
                   </mat-radio-button>
               </mat-radio-group>
           </div>
-              <!-- <select>
-                  <option value="">
-                      <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
-                  </option>
-                  <option value="valid" selected>
-                      <mat-icon style="color:#76d354;">grade</mat-icon>
-                  </option>
-                  <option value="invalid">
-                      <mat-icon style="color:#e6ad11;">rectangle</mat-icon>
-                  </option>
-              </select> -->
+
           </div>
           </div>
       </mat-card-content>
@@ -312,7 +302,7 @@
     </mat-card>
 
     <!-- BUTTON-->
-    <div class="row-boxSM">
+    <div class="sm-row-box-rkScale">
       <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
           aria-label="ranking">
           <mat-icon>cancel</mat-icon><br>Cancel
