--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -39,7 +39,8 @@
   color: grey;
   // animation: bounce 1000ms 1000ms ease-in-out  forwards  ;
 }
-.section2{
+// 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
+.sm-section2-rkScale{
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -47,14 +48,8 @@
   width: 100%;
 
 }
-.direction-MinMax{
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
-}
-.row-boxSM{
+.sm-row-box-rkScale{
   display: flex;
   gap: 2rem;
   flex-direction: row;
@@ -62,7 +57,7 @@
   width: 100%;
 
 }
-.column-boxSM{
+.sm-column-box-rkScale{
   display: flex;
   gap: 2rem;
   flex-direction: row;
@@ -70,7 +65,7 @@
   width: 100%;
   justify-content: center;}
 
-.section3{
+.sm-section3-rkScale{
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -80,6 +75,7 @@
   width: 100%;
   gap: 1rem;
 }
+
 @media (min-width: 1025px) {
   .desktop {
     display: flex;
