--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -4,8 +4,8 @@
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
-        <span class="checkmark">&#x2714;</span>        
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+        <span class="checkmark">&#x2714;</span>
     </label> -->
     <div class="modal-content">
         <video src='{{CREATION_VIDEO_PATH}}' controls></video>
@@ -65,77 +65,117 @@
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
-    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
-    <div style="position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #ccc;
-    cursor: move;
-    width: 1024px;
-    height: 54px;" cdkDragHandle> </div>
-    <div style="text-align: center;">
-        <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
-        <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-    </div>
-    <div style="display: flex;justify-content: center;justify-items: center; flex-direction: column;">
+    style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: lightgrey 3px solid; overflow: auto;
+       max-height: 36rem;
+    bottom: -2; ">
 
-        <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-            <mat-label>Copy & Paste TEST NAMES</mat-label>
-            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""></textarea>
+<div class="example-handle" cdkDragHandle>WWW</div>
+     <!-- Cards Criteria-->
+     <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Criteria</mat-card-title>
+      </mat-card-header>
+      <br>
+      <div class="sm-section2-rkScale" >
+        <div class="sm-column-box-rkScale">
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Name</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name" style="font-size: 20px;color: #324395;">
+            <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" style="width: 40%">
+            <mat-label>Category Description</mat-label>
+            <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName"
+            [value]="bmxItem.componentSettings[0].categoryName"placeholder="Category Description" style="font-size: 20px;color: #ee7f25;">
+            <mat-hint>Add a category to the left side</mat-hint> <!-- Hint text for Category Description -->
+          </mat-form-field>
+        </div>
+<br>
+
+
+      </div>
+      <mat-card-content>
+
+      </mat-card-content>
+
+    </mat-card>
+<br>
+    <!-- Cards Test Name-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Test Name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div style="text-align: center;">
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+      </div>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
+          <mat-label>Copy & Paste TEST NAMES</mat-label>
+          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
+              placeholder="Paste test names here" cdkTextareaAutosize
+              cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
+          <mat-hint>Type or paste the test names here that you want to include</mat-hint>
         </mat-form-field>
-        <p style="margin-left: 30px; color: #757575;">
-            Add the names you want to test
-        </p>
-    </div>
+      </div>
 
-    <hr>
-    <div style="display: flex;flex-direction: row;;padding: 0 20px;justify-content: space-around;gap: 30px;">
-        <div style="display: flex; flex-direction: column;">
-            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-                [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
-                style="font-size: 10px;color: #324395;padding-bottom: 10px;">
-            <p style=" color: #757575;">
-                Add a category to the left side
-            </p>
-        </div>
-        <div style="display: flex; flex-direction: column;">
-            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-                [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-                style="font-size: 20px;color: #ee7f25;padding-bottom: 20px;">
-            <p style="margin-left: 25px; color: #757575;">
-                Add a rate matrix subtitle
-            </p>
-        </div>
-        <div style="display: flex; flex-direction: column">
-            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-            <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
-            <mat-checkbox #changePreference (click)="changePreferenceScore()" [(ngModel)]="ranking">Preference
-                Score</mat-checkbox>
-        </div>
-    </div>
+      </mat-card-content>
 
-    <hr>
-    <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
-            aria-label="ranking">
-            <mat-icon>cancel</mat-icon><br>Cancel
-        </button>
-        <div>
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
-            <br>
-            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}}
-                <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="3" max="10">
-                10 <br>
+    </mat-card>
+<br>
+
+   <!-- Cards Select Ranking-->
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Select Ranking</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="sm-section3-rkScale">
+
+
+
+          <div class="sm-row-box-rkScale">
+          <div>
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+              <br>
+              <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                  {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                      max="10">
+                  10 <br>
+              </div>
+              <label for="volume">{{rankingScaleValue}}</label>
+
+          </div>
+          <div style="    margin-top: 0.5rem;
+        ">
+               <div style="display: flex; flex-direction: column">
+                <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+                <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
+                <mat-checkbox #changePreference (click)="changePreferenceScore()" [(ngModel)]="ranking">Preference
+                    Score</mat-checkbox>
             </div>
-            <label for="volume">{{rankingScaleValue}}</label>
-        </div>
+          </div>
 
-        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
-            <mat-icon>check_circle</mat-icon><br> DONE
-        </button>
-    </div>
+          </div>
+          </div>
+      </mat-card-content>
+
+    </mat-card>
+
+    <!-- BUTTON-->
+    <div class="sm-row-box-rkScale">
+      <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+          aria-label="ranking">
+          <mat-icon>cancel</mat-icon><br>Cancel
+      </button>
+      <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+          (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
+          aria-label="ranking">
+          <mat-icon>check_circle</mat-icon><br> Done
+      </button>
+  </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 
