Fix participant emails styles

--- a/src/app/bmx/components/participants-email/participants-email.component.scss
+++ b/src/app/bmx/components/participants-email/participants-email.component.scss
@@ -26,7 +26,7 @@
 @media screen and(max-width: 1203px) {
     .container {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         width: 80%;
         margin-left: 20px;
